# toast

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCT_ROADMAP.md  README.md  ROADMAP.md  TODO.md  a  app.py  dev.sh  migration.py  package.json  pyproject.toml
.cursor/rules/: backend.mdc  frontend.mdc  product_engineer.mdc
.github/: FUNDING.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend.yml  ci.yml  frontend.yml
apps/backend/: .env.example  DOCUMENT_PROCESSING.md  Dockerfile  Dockerfile.streamlit  MIGRATION.md  README.md  TODO.md  app.py  main.py  pyproject.toml  pytest.ini  run_dashboard.py  test_airtable_crawl.py
apps/backend/.cursor/rules/: fastapi.mdc
apps/backend/core/: config.py  jwt.py  logging.py  middleware.py
apps/backend/docs/: CACHING_STRATEGY.md  COMPLETION_MECHANISM.md  CRAWLER.md  DASHBOARD_MIGRATION.md  DASHBOARD_README.md  DATABASE_ARCHITECTURE_REVIEW.md  DATA_TO_PRODUCTION.md  DEEP_ANALYSIS_SPEC.md  DOCUMENT_PROCESSING.md  PERFORMANCE_IMPROVEMENTS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_PLAN.md  SERVICE_ARCHITECTURE.md  STREAMLIT_SETUP.md  STREAMLIT_THREADING_FIX.md  USER_TIER_SYSTEM.md
apps/backend/legacy/: crawl4ai_crawler.py
apps/backend/models/: clerkUser.py
apps/backend/scripts/: POPULATE_TIERS_README.md  README.md  migrate_company_tiers.py  migrate_users.py  run_dashboard.py  run_logo_update.sh  set_all_companies_all_tiers.py  simple_logo_update.py  stop_dashboard.py  test_logo_script.py  test_tier_population.py  update_company_logos.py
apps/backend/src/: clausea_crawler.py  company.py  constants.py  conversation.py  crawl4ai_crawler.py  crawler.py  crawling.py  db.py  document.py  document_processor.py  embedding.py  exceptions.py  llm.py  migration.py  models.py  pinecone.py  pinecone_client.py  pipeline.py  promotion.py  rag.py  summarizer.py  toast_crawler.py  user.py  vector_db.py
apps/backend/src/agent/: agent.py  tools.py
apps/backend/src/core/: config.py  database.py  db_indexes.py  jwt.py  logging.py  middleware.py
apps/backend/src/dashboard/: app.py  auth.py  dashboard_embedding.py  db_utils.py  test_connection.py  utils.py
apps/backend/src/dashboard/components/: company_creation.py  company_view.py  complete_workflow.py  crawling.py  deep_analysis.py  documents_view.py  embedding.py  migration.py  product_creation.py  product_view.py  promotion.py  rag.py  summarization.py
apps/backend/src/migrations/: 0001_add_subscription_fields.py  migrate_companies_to_products.py
apps/backend/src/models/: company.py  conversation.py  document.py  product.py  user.py
apps/backend/src/prompts/: __init__.py  compliance_prompts.py  rag_prompts.py  summarizer_prompts.py
apps/backend/src/repositories/: __init__.py  base_repository.py  company_repository.py  conversation_repository.py  document_repository.py  product_repository.py  user_repository.py
apps/backend/src/routes/: companies.py  company.py  conversation.py  conversations.py  list.py  migration.py  paddle.py  products.py  promotion.py  q.py  subscription.py  user.py
apps/backend/src/services/: __init__.py  base_service.py  company_service.py  conversation_service.py  document_service.py  embedding_service.py  extraction_service.py  migration_service.py  paddle_service.py  product_service.py  promotion_service.py  qa_service.py  rag_service.py  service_factory.py  usage_service.py  user_service.py
apps/backend/src/utils/: cancellation.py  llm_usage.py  llm_usage_tracking_mixin.py  markdown.py  perf.py
apps/backend/tests/: README.md  __init__.py  conftest.py  embedding_service_test.py  usage_system_test.py  warning_suppression_test.py
apps/backend/tests/unit/: __init__.py  company_service_db_test.py  config_test.py  crawler_test.py  jwt_test.py  models_test.py  product_service_db_test.py  test_extraction_service.py  utils_test.py
apps/backend/tests/unit/crawler/: __init__.py  domain_logic_test.py  extraction_and_sitemap_test.py  state_test.py  test_binary_parsing.py
apps/frontend/: .env.example  .eslintrc.json  .prettierignore  .prettierrc.cjs  .prettierrc.json  AUTHENTICATION_SETUP.md  README.md  bun.lockb  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  posthog.ts  proxy.ts  tailwind.config.ts  tsconfig.json
apps/frontend/.cursor/: rules
apps/frontend/.github/: funding.yml
apps/frontend/app/: globals.css  layout.tsx  manifest.ts  provider.tsx  robots.ts  sitemap.ts
apps/frontend/components/: PostHogProvider.tsx  faq-section.tsx  features-section.tsx  hero-section.tsx  highlights-section.tsx  pricing-section.tsx  testimonials-section.tsx
apps/frontend/data/: appulse.tsx  config.tsx  faq.tsx  logo.tsx  pricing.tsx  testimonials.tsx
apps/frontend/docs/: ANALYTICS.md  AUTHENTICATION_SETUP.md
apps/frontend/frontend/: bun.lockb
apps/frontend/hooks/: use-route-changed.ts  use-scrollspy.ts  useAnalytics.ts  useAuthStatus.ts  useBillingPortal.ts  useCheckout.ts  useTierLimits.ts  useUserData.ts
apps/frontend/lib/: analytics.ts  config.ts  env.ts  http.ts  tier-api-client.ts  tier-api.ts  verdict.ts
apps/frontend/src/: Providers.tsx
apps/frontend/theme/: index.ts
apps/frontend/types/: company.ts  conversation.ts  document.ts  index.ts  message.ts  meta-summary.ts  product.ts  user.ts
apps/legacy-frontend/: AUTHENTICATION_SETUP.md  next.config.mjs  package.json  tailwind.config.js
dev/: setup-precommit.sh
frontend/: .editorconfig  README.md  package-lock.json
frontend/.next/: trace
frontend/src/app/: page.tsx
src/: TODO.md  companies.py  company.py  crawl4ai_crawler.py  crawl4ai_deep_crawl.py  db.py  document.py  embedding.py  firecrawl_crawler.py  firecrawl_url_classifier.py  fox_deep_crawl.py  models.py  pinecone.py  rag.py  summarizer.py  url_classifier.py
src/dashboard/: app.py  db_utils.py  utils.py
src/dashboard/components/: __init__.py  company_creation.py  (+2 more)
src/routes/: company.py  crawler.py  q.py
src/utils/: markdown.py  md.py
tests/: test_crawl4ai_crawler.py
(+231 files in other folders)
