[project]
name = "toast"
version = "0.1.0"
description = "Toast AI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "bs4>=0.0.2",
    "crawl4ai>=0.6.2",
    "fastapi[standard]>=0.115.11",
    "fetchfox-sdk>=0.7.0",
    "firecrawl-py>=1.13.5",
    "langchain>=0.3.25",
    "litellm>=1.65.1",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "motor[zstd]>=3.7.0",
    "mypy>=1.15.0",
    "nanoid>=2.0.0",
    "nltk>=3.9.1",
    "pinecone>=6.0.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "shortuuid>=1.0.13",
    "streamlit>=1.43.2",
    "supabase>=2.13.0",
]
