[project]
name = "toast"
version = "0.1.0"
description = "Toast AI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.11.18",
    "bs4>=0.0.2",
    "certifi>=2025.4.26",
    "crawl4ai>=0.6.3",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.25",
    "litellm>=1.65.1",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "markdownify>=1.1.0",
    "mistralai>=1.8.1",
    "motor[zstd]>=3.7.0",
    "mypy>=1.15.0",
    "nanoid>=2.0.0",
    "nltk>=3.9.1",
    "pdfplumber>=0.11.7",
    "pinecone>=6.0.2",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "shortuuid>=1.0.13",
    "streamlit>=1.43.2",
    "supabase>=2.13.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.2",
    "watchdog>=6.0.0",
]
